--- a/index.html
+++ b/index.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <link rel="stylesheet" href="/Users/Devansh/Desktop/WEBSITE/css/style1.css">
+   <style>
+       body 
+{
+    font-family: Times
+'Times New Roman';
+    color: white;
+ }
+ h1{
+    padding:20px;
+ }
+ .left,.right {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+ }
+ .left {
+    left: 0;
+    background-color: rgb(10, 0, 95);
+ }
+ .right {
+    right: 0;
+    background-color: rgb(245, 3, 24);
+ }
+ .centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+ }
+ .centered img {
+    width: 150px;
+    border-radius: 50%;
+ }
+   </style>>
 </head>
 <body>
 <div class="left">
@@ -11,6 +49,18 @@
 <center><h3>1=SA<br>2=RE<br>3=GA<br>4=MA<br>5=PA<br>6=DHA<br>7=NI<br>8=SA</h3></center>
 <center><h1>COVID 19 SHOOTER</h1></center>
 <center><iframe src="https://scratch.mit.edu/projects/440746799/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+<center><h1>CAT RUNNER</h1></center>
+<center><h3>IT IS A GAME<br>IN WHICH YOU<br>HAVE TO MAKE<br>THE CAT REACH<br>THE DOOR.</h3></center>
+<center><h1>INSTRUCTIONS:</h1></center>
+<center><h3>LEFT ARROW=LEFT<br>RIGHT ARROW=RIGHT<br>SPACEBAR=JUMP<br>YOU CANNOT STEP<br>ON RED AREA.</h3></center>
+<center><h1>BUBBLE SHOOTER</h1></center>
+<center><iframe src="https://scratch.mit.edu/projects/441096911/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+<center><h1>SANITIZE THE CITY</h1></center>
+<center><h3>IT IS A GAME<br>IN WHICH YOU<br>HAVE TO SANITIZE<br>THE CITY.</h3></center>
+<center><h1>INSTRUCTIONS:</h1></center>
+<center><h3>CLICK ON THE<br>PLANE TO SHOOT<br>SANITIZER</h3></center>
+<center><h1>FRUIT SNIPER</h1></center>
+<center><iframe src="https://scratch.mit.edu/projects/441119082/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
 </div>
 <div class="right">
     <center><h1>FREE ONLINE PIANO</h1></center>
@@ -19,6 +69,18 @@
 <center><h3>IT IS A GAME<br>THROUGH WHICH ONE<br>CAN ENTERTAIN<br>THEMSELVES BY<br>SHOOTING COVID 19</h3></center>
 <center><h1>INSTRUCTIONS:</h1></center>
 <center><h3>SPACE KEY FOR JUMPING<br>DOWN ARROW KEY FOR SHOOTING SANITIZER</h3></center>
+<center><h1>RUN CAT RUN</h1></center>
+<center><iframe src="https://scratch.mit.edu/projects/441093710/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+<center><h1>BUBBLE SHOOTER</h1></center>
+<center><h3>IT IS A GAME<br>IN WHICH YOU<br>HAVE TO SHOOT<br>THE BALLS WHICH<br>APPEARS IN FRONT.</h3></center>
+<center><h1>INSTRUCTIONS:</h1></center>
+<center><h3>MOUSE=SHOOTER CONTROLER<br>SPACEBAR=SHOOT BULLETS</h3></center>
+<center><h1>SANITIZING CITY</h1></center>
+<center><iframe src="https://scratch.mit.edu/projects/441100346/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></center>
+<center><h1>FRUIT SNIPER</h1></center>
+<center><h3>IT IS A GAME<br>IN WHICH YOU<br>HAVE TO SHOOT<br>THE FRUITS.</h3></center>
+<center><h1>INSTRUCTIONS:</h1></center>
+<center><h3>UP ARROW=UP<br>DOWN ARROW=RIGHT<br>SPACEBAR=SHOOT</h3></center>
 </div>
 </body>
 </html>
